Removed code smells shown by sonar